--- a/jobposting/jobposting.yaml
+++ b/jobposting/jobposting.yaml
@@ -1,24 +1,16 @@
 swagger: '2.0'
 info:
   title: WorkBC Job Posting API
-  description: "This API allows you to receive a feed of jobs from WorkBC's Job Board. Please see our <a href=\"https://github.com/bcgov/api-specs/blob/master/COLLECTION_NOTICE.md#collection-notice\" target=\"_blank\">data collection notice</a>."
+  description: >-
+    This API allows you to receive a feed of jobs from WorkBC's Job Board.
+    Please see our <a
+    href="https://github.com/bcgov/api-specs/blob/master/COLLECTION_NOTICE.md#collection-notice"
+    target="_blank">data collection notice</a>.
   version: 1.0.0
-  license: 
-    name: Open Government License - British Columbia
-    url: "http://www2.gov.bc.ca/gov/content/governments/about-the-bc-government/databc/open-data/open-government-license-bc"
-  termsOfService: "http://www2.gov.bc.ca/gov/content/governments/about-the-bc-government/databc/open-data/api-terms-of-use-for-ogl-information"
-  contact:
-    name: "WorkBC"
-    url: "https://www.workbc.ca"
-    email: "Marina.Brown@gov.bc.ca"
-externalDocs: 
-   description: "WorkBC offers a publicly available job posting application programming interface (API). The API service provides the ability to request, filter and access live job posting data powered by the WorkBC Job Board."
-   url: "https://www.workbc.ca/api"
-host: workbcjobs.api.gov.bc.ca
 basePath: /v1
 schemes:
+  - http
   - https
-# will be prefixed to all paths
 produces:
   - application/json
 paths:
@@ -32,7 +24,7 @@ paths:
         major projects defined in WorkBC's Job Board. The response includes the
         id and caption.
       responses:
-        200:
+        '200':
           description: An array of major projects
           schema:
             type: array
@@ -52,7 +44,7 @@ paths:
         job types defined in WorkBC's Job Board. The response includes the
         id and caption.
       responses:
-        200:
+        '200':
           description: An array of job types
           schema:
             type: array
@@ -72,7 +64,7 @@ paths:
         regions defined in WorkBC's Job Board. The response includes the
         id and caption.
       responses:
-        200:
+        '200':
           description: An array of regions
           schema:
             type: array
@@ -82,65 +74,114 @@ paths:
           description: Unexpected error
           schema:
             $ref: '#/definitions/Error'
+  /Industries:
+    get:
+      tags:
+        - Job Feed
+      summary: Industries
+      description: >
+        The Industries endpoint returns all the Industries and related sub
+        industries 
+
+        defined in WorkBC's Job Board. The response includes the id and caption
+        for 
+
+        each industry and each sub industry.
+      responses:
+        '200':
+          description: An array of industries and sub industries
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Industry'
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
   /jobs:
     post:
       tags:
         - Job Feed
       summary: Job Feed
-      description: The job feed endpoint returns an array of job records that
-        satisfy the supplied criteria.
+      description: >-
+        The job feed endpoint returns an array of job records that satisfy the
+        supplied criteria.
       parameters:
-      - name: lastRequestDate
-        in: formData
-        type: string
-        format: date-time
-        description: The date of the last request. Only job postings changed
-          or deleted after this time will be included in the response.
-          Default is _today_ - 10 days.
-      - name: region
-        in: formData
-        type: integer
-        format: int32
-        description: The unique id of a region within B.C. Only job postings
-          located within the specified region will be included in the
-          response. If not specified, the data is not filtered by region.
-      - name: city
-        in: formData
-        type: string
-        description: The name of a city within B.C. Only job postings
-          located within the specified city will be included in the
-          response. If not specified, the data is not filtered by city.
-      - name: jobTypes
-        in: formData
-        type: array
-        collectionFormat: multi
-        items:
+        - name: lastRequestDate
+          in: formData
+          type: string
+          format: date-time
+          description: >-
+            The date of the last request. Only job postings changed or deleted
+            after this time will be included in the response. Default is _today_
+            - 10 days.
+        - name: region
+          in: formData
           type: integer
-        description: ID values for types of job to filter on.
-          Only job postings matching all specified values will be included
-          in the response. If not specified, the data is not filtered by
-          job type.
-      - name: majorProjects
-        in: formData
-        type: boolean
-        description: When true, only include job postings that have a Major
-          Project associated with them.  When false, only include job postings
-          that do not have a Major Project associated with them. If not
-          specified, the data is not filtered by major project, unless the
-          MajorProjectID parameter is used.
-      - name: majorProjectID
-        in: formData
-        type: integer
-        format: int32
-        description: The unique id of a major project within the WorkBC Job Board
-          database. When specified, only job postings associated with the
-          specified major project will be included in the response.
-          This parameter has no effect if the MajorProjects parameter is
-          supplied with the value false. If not specified, the data is not
-          filtered by major project, unless the MajorProjects parameter is
-          used.
+          format: int32
+          description: >-
+            The unique id of a region within B.C. Only job postings located
+            within the specified region will be included in the response. If not
+            specified, the data is not filtered by region.
+        - name: city
+          in: formData
+          type: string
+          description: >-
+            The name of a city within B.C. Only job postings located within the
+            specified city will be included in the response. If not specified,
+            the data is not filtered by city.
+        - name: jobTypes
+          in: formData
+          type: array
+          collectionFormat: multi
+          items:
+            type: integer
+          description: >-
+            ID values for types of job to filter on. Only job postings matching
+            all specified values will be included in the response. If not
+            specified, the data is not filtered by job type.
+        - name: majorProjects
+          in: formData
+          type: boolean
+          description: >-
+            When true, only include job postings that have a Major Project
+            associated with them.  When false, only include job postings that do
+            not have a Major Project associated with them. If not specified, the
+            data is not filtered by major project, unless the MajorProjectID
+            parameter is used.
+        - name: majorProjectID
+          in: formData
+          type: integer
+          format: int32
+          description: >-
+            The unique id of a major project within the WorkBC Job Board
+            database. When specified, only job postings associated with the
+            specified major project will be included in the response. This
+            parameter has no effect if the MajorProjects parameter is supplied
+            with the value false. If not specified, the data is not filtered by
+            major project, unless the MajorProjects parameter is used.
+        - name: industries
+          in: formData
+          type: array
+          collectionFormat: multi
+          items:
+            type: integer
+          description: >-
+            ID values for industries to filter on. Only job postings matching
+            all specified values will be included in the response. If not
+            specified, the data is not filtered by industry.
+        - name: subIndustries
+          in: formData
+          type: array
+          collectionFormat: multi
+          items:
+            type: integer
+          description: >-
+            ID values for sub industries to filter on. Only job postings
+            matching all specified values will be included in the response. If
+            not specified, the data is not filtered by sub industry.
       responses:
-        200:
+        '200':
           description: A set of job records.
           schema:
             $ref: '#/definitions/JobFeedResponse'
@@ -165,9 +206,10 @@ definitions:
         description: The name of the employer who is offering the job.
       JobDescription:
         type: string
-        description: Details of the job posting. This is limited to 250
-          characters, and HTML tags are stripped out. For a full description,
-          use the Url property to view the job posting on the WorkBC website.
+        description: >-
+          Details of the job posting. This is limited to 250 characters, and
+          HTML tags are stripped out. For a full description, use the Url
+          property to view the job posting on the WorkBC website.
       Locations:
         type: array
         description: Details of all of the locations where the job is available.
@@ -181,17 +223,19 @@ definitions:
         type: string
         format: date-time
       ExpiryDate:
-        description: The date that the job will expire. It is the caller's
-          responsibility to remove job postings once they expire. After this
-          date the supplied Url will show a 404 page.
+        description: >-
+          The date that the job will expire. It is the caller's responsibility
+          to remove job postings once they expire. After this date the supplied
+          Url will show a 404 page.
         type: string
         format: date-time
       SalaryType:
         type: string
       SalaryMultiplier:
-        description: The amount to multiply SalaryMin and SalaryMax by in order
-          to convert to annual values. This is needed if you want to compare
-          salaries for jobs that have been posted using different salary types.
+        description: >-
+          The amount to multiply SalaryMin and SalaryMax by in order to convert
+          to annual values. This is needed if you want to compare salaries for
+          jobs that have been posted using different salary types.
         type: integer
       SalaryMin:
         type: number
@@ -211,7 +255,8 @@ definitions:
     properties:
       ID:
         type: integer
-        description: The unique ID of the Major Project in the WorkBC Job Board database.
+        description: >-
+          The unique ID of the Major Project in the WorkBC Job Board database.
           Use this when restricting the Job Feed to only one Major Project.
       Caption:
         type: string
@@ -232,49 +277,72 @@ definitions:
       Caption:
         type: string
         description: The name of the Region.
+  Industry:
+    type: object
+    properties:
+      ID:
+        type: integer
+        description: Industry ID.
+      Caption:
+        type: string
+        description: The name of the Industries.
+      SubIndustries:
+        type: array
+        items:
+          $ref: '#/definitions/SubIndustry'
+  SubIndustry:
+    type: object
+    properties:
+      ID:
+        type: integer
+        description: Sub Industry ID.
+      Caption:
+        type: string
+        description: The name of the SubIndustries.
   RecordType:
     type: integer
     description: The type of change that has happened to this job.
     enum:
-    - Undefined
-    - Update
-    - Delete
+      - Undefined
+      - Update
+      - Delete
   RegionID:
     type: integer
     description: A region within B.C.
     enum:
-    - Undefined
-    - Vancouver Island/Coast
-    - Mainland/Southwest
-    - Thompson-Okanagan
-    - Kootenay
-    - Cariboo
-    - North Coast
-    - Nechako
-    - Northeast
+      - Undefined
+      - Vancouver Island/Coast
+      - Mainland/Southwest
+      - Thompson-Okanagan
+      - Kootenay
+      - Cariboo
+      - North Coast
+      - Nechako
+      - Northeast
   JobTypeID:
     type: integer
     description: The type of work.
     enum:
-    - Undefined0
-    - Full-Time
-    - Part-Time
-    - Contract
-    - Undefined4
-    - Undefined5
-    - Student
-    - Undefined7
-    - Undefined8
-    - Casual
-    - Seasonal
-    - Temporary
-    - Permanent
-    - Co-op
-    - Apprenticeship
+      - Undefined0
+      - Full-Time
+      - Part-Time
+      - Contract
+      - Undefined4
+      - Undefined5
+      - Student
+      - Undefined7
+      - Undefined8
+      - Casual
+      - Seasonal
+      - Temporary
+      - Permanent
+      - Co-op
+      - Apprenticeship
   Location:
     type: object
-    description: Details of where a job is located. A job can have up to three
-      associated locations.
+    description: >-
+      Details of where a job is located. A job can have up to three associated
+      locations.
     properties:
       City:
         type: string
