--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,10 @@
-on: push
-name: Build Pipeline
+on:
+  push:
+    branches:
+    - master
+    
+name: OpenAPI Specs lint
+
 jobs:
   spectralChecks:
     name: Spectral checks
